--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "scripts": {
+    "forever-start": "forever start node src/index.js",
     "start": "node src/index.js",
     "prisma": "prisma"
   },
